--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md
-recursive-include octoprint_webcamtab/templates *
-recursive-include octoprint_webcamtab/translations *
-recursive-include octoprint_webcamtab/static *
+include LICENSE README.md
+graft src/*/templates
+graft src/*/static/dist
+graft src/*/translations/*/LC_MESSAGES
