--- a/babel.cfg
+++ b/babel.cfg
@@ -1,6 +1,8 @@
-[python: */**.py]
-[jinja2: */**.jinja2]
-extensions=jinja2.ext.autoescape, jinja2.ext.with_
+[python: src/*/**.py]
 
-[javascript: */**.js]
+[jinja2: src/*/templates/**.jinja2]
+silent=false
+extensions=jinja2.ext.autoescape, jinja2.ext.with_, jinja2.ext.do, octoprint.util.jinja.trycatch
+
+[javascript: src/*/static/js/**.js]
 extract_messages = gettext, ngettext
